# solvechessdotcom

./: .gitignore  README.md  main.py  pyproject.toml  run_app.sh  run_pipelines.sh
solvechessdotcom/: __init__.py  board.py  browser_automation.py  castling.py  common.py  config.py  daily_fen.py  solution.py  stockfish.py  svg_converter.py  utils.py  video.py
tests/: test_board.py  test_castling.py  test_solution.py  test_stockfish_parse.py  test_utils.py  test_video_text.py
